P8/terraform/bootstrap/templates/verify-cosign.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: p8-verify-cosign
spec:
  validationFailureAction: Enforce
  background: false
  webhookConfiguration:
    failurePolicy: Fail
    timeoutSeconds: 30
  rules:
    - name: verify-comicrent-ghcr-images
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [sa-p8]
      verifyImages:
        - imageReferences:
            - ghcr.io/davidvelasquez77/comicrent-*:*
          failureAction: Enforce
          mutateDigest: false
          verifyDigest: false
          attestors:
            - entries:
                - keyless:
                    issuer: https://token.actions.githubusercontent.com
                    subjectRegExp: 'https://github\.com/DavidVelasquez77/Practicas-SA-B-202307705/\.github/workflows/p8-release\.yml@refs/tags/v[0-9]+\.[0-9]+\.[0-9]+'
                    rekor:
                      url: https://rekor.sigstore.dev
